fixed issue on regular-sized screen with description overflow

--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -25,13 +25,32 @@
         overflow: hidden;
         border-radius: 10px;
         max-width: calc(25% - 10px);
-    }
 
-    .portfolio-page {
-        position: absolute;
-        z-index: 2;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        .portfolio-page {
+            position: absolute;
+            z-index: 2;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .content {
+            position: absolute;
+            width: 100%;
+            z-index: 3;
+            padding: 10px 20px;
+            transition: cubic-bezier(0.645, 0.045, 0.355, 1);
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0, rgba(0, 0, 0, 1));
+            // bottom: -70px;
+
+            .description {
+                font-size: 10px;
+                font-weight: normal;
+                flex-wrap: wrap;
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+                padding-right: 25px;
+            }
+        }
     }
 }
